# app/Http/Controllers/API/V1/Admin/Auth/AuthenticateController.php
@@ -9,10 +9,12 @@ use App\Models\User;
 use App\Services\JWTService\JWTService;
 use Exception;
 use Illuminate\Http\JsonResponse;
+use Illuminate\Support\Facades\DB;
 use Illuminate\Support\Facades\Hash;
 use Symfony\Component\HttpFoundation\Response;
+use Throwable;
 
-class LoginController extends Controller
+class AuthenticateController extends Controller
 {
     /**
      * @param LoginFormRequest $request
@@ -59,20 +61,32 @@ class LoginController extends Controller
      *        description="Validation Failed",
      *     ),
      * ),
+     * @throws Throwable
      */
     public function login(LoginFormRequest $request, SyncTokenAction $tokenAction): JsonResponse
     {
         try {
+
             $user = User::where('email', $request->input('email'))->first();
+
             if (!($user && Hash::check($request->input('password'), $user->password))) {
                 return $this->errorResponse('Invalid Credentials', Response::HTTP_UNPROCESSABLE_ENTITY);
             }
-            $token = JWTService::for($user->uuid)->createToken();
+
+            $response = [];
+            if ($user->hasValidToken()) {
+                $response['token'] = $user->hasValidToken()->token;
+                $tokenAction->attach($user, $response['token']);
+                return $this->successResponse($response, 'authenticated successfully');
+            }
+            $token = JWTService::make()->setPayload($user->uuid)->createToken();
             $response = [
                 "token" => $token,
             ];
-            $user->tokens()->create(['token_title' => 'login token']);
-            $tokenAction->updateLastLoggedIn($user);
+            DB::beginTransaction();
+            $user->tokens()->create(['token_title' => 'login token', 'token' => $token]);
+            $tokenAction->attach($user, $token);
+            DB::commit();
             return $this->successResponse($response, 'authenticated successfully');
         } catch (Exception $exception) {
             return $this->errorResponse($exception->getMessage());
@@ -80,8 +94,46 @@ class LoginController extends Controller
     }
 
 
-    public function logout()
+    /**
+     * @return JsonResponse
+     * /**
+     *
+     *
+     * @OA\Post(
+     *     path="/api/v1/admin/logout",
+     *     summary="Logout an Admin account",
+     *     operationId="admin-logout",
+     *     tags={"Admin"},
+     *     security={{"jwt":{}}},
+     *     @OA\Response(
+     *        response=200,
+     *        description="OK",
+     *     ),
+     *     @OA\Response(
+     *        response=401,
+     *        description="Unauthorized",
+     *     ),
+     *     @OA\Response(
+     *        response=404,
+     *        description="Page not found",
+     *     ),
+     *     @OA\Response(
+     *        response=500,
+     *        description="Internal server error",
+     *     ),
+     *     @OA\Response(
+     *        response=422,
+     *        description="Validation Failed",
+     *     ),
+     * ),
+     */
+    public function logout(SyncTokenAction $tokenAction)
     {
-        //TODO;
+        try {
+            $tokenAction->detach(auth()->user());
+            return $this->successResponse([], 'logged out successfully');
+        } catch (Exception $exception) {
+            return $this->errorResponse($exception->getMessage());
+        }
     }
 }
